syntax = "proto3";
package zensayyy.fm.proto;
import "protocol/Stream.proto";

message StreamT {
  string videoId = 1;
  string title = 2;
  string description = 3;
  StreamAction action = 4;
}

message ControlMessage {
  StreamJoin id = 1; 
  oneof message {
    StreamT stream = 2;
  }
}
