syntax = "proto3";
import "google/protobuf/timestamp.proto";
package zensayyy.fm.proto;

enum StreamAction {
  ADD = 0;
  FRESH = 1;
}

message ClipMetadata {
  string src = 1; 
  string title = 2; 
  string description = 3; 
  string thumbnail = 4; 
}

message StreamUpdate {
  ClipMetadata upcoming = 2;  // next upcoming clip, first one is the active one
  google.protobuf.Timestamp time = 3; // timestamp from server (???)
}

message StreamUpdateSummary {
  repeated StreamUpdate updates = 2;  
}

// sent by the browser / app to the server to join a stream (receive updates)
message StreamJoin {
  string streamId = 1;
}

message StreamMessage {
  StreamAction action = 1;
  oneof message {
    StreamUpdateSummary updateSummary = 2;
    StreamUpdate update = 3;
    StreamJoin join = 4;
  }
}
